--- a/page4.html
+++ b/page4.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet">
+    <script src="scripts.js" defer></script>
   </head>
-  <body>
+  <body id="body-page4">
+    <div id="main-menu"></div>
     <div class="container">
     <h1>Page 4</h1>
     </div>
