--- a/page3.html
+++ b/page3.html
@@ -24,7 +24,7 @@
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-secondary" data-bs-theme="dark">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-secondary">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-secondary">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-secondary">Go somewhere</a>
           </div>
         </div>
       </div>
