--- a/page4.html
+++ b/page4.html
@@ -17,7 +17,7 @@
     <h1>Page 4</h1>
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      Launch demo modal
+      Modal
     </button>
 
     <!-- Modal -->
