--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
     <h1>Hello, world!</h1> 
   </div> 
  
-  <div id="carouselExampleIndicators" class="carousel slide">
+  <div id="carouselExampleIndicators" class="carousel slide wrap">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div> 
     <div class="carousel-inner">  
-      <div class="carousel-item active">
+      <div class="carousel-item active ratio ratio-16x9">
         <img src="img/image1.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ratio ratio-16x9">
         <img src="img/image2.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ratio ratio-16x9">
         <img src="img/image3.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ratio ratio-16x9">
         <img src="img/image4.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
