--- a/main-menu.html
+++ b/main-menu.html
@@ -6,7 +6,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-body-tertiary">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-body-tertiary position-relative z-1">
         <li class="nav-item">
           <a class="nav-link" href="page2.html">Page 2</a>
         </li>
